hyrax_tests/errors/bes_timeout_error.dds
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dds?error(6)
-s
